appId: app.tomevoice.tomevoice_spike
---
- launchApp:
    clearState: false
- tapOn: ".*Specimen.*"
- tapOn: "Chapters"
- assertVisible: "CHAPTERS"
- tapOn: "Specimen"
- assertVisible: "Library"
