appId: app.tomevoice.tomevoice_spike
---
- launchApp:
    clearState: false
- tapOn: ".*Specimen.*"
- assertVisible: "Library"
- assertVisible: ".*quick brown fox.*"
- assertVisible: ".*PRESET: NATURAL.*"
- tapOn: "Next sentence"
- assertVisible: ".*Pack my box.*"
- tapOn: "Previous sentence"
- assertVisible: ".*quick brown fox.*"
